# onnx-inference

./: .dockerignore  .gcloudignore  Dockerfile  README.md  app.py  config.py  inference.py  pyproject.toml  quickstart.py  requirements-dev.txt  requirements.txt  test_app.py  test_config.py  test_inference.py
.github/workflows/: ci.yml
